fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -179,7 +179,7 @@
 /* MAIN PAGE */
 
 .mainHeader {
-  background-color: #f5f5f5;
+  background-color: #acaaaa;
   background-image: url('https://laurent.qodeinteractive.com/wp-content/uploads/2019/12/main-h-new-rev-img-1.jpg');
   height: 100vh;
   background-size: cover;
