--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 :root {
-  --font-base: "Cormorant Upright", serif;
-  --font-alt: "Open Sans", sans-serif;
+  --font-base: 'Cormorant Upright', serif;
+  --font-alt: 'Open Sans', sans-serif;
 
   --color-golden: #dcca87;
   --color-black: #0c0c0c;
@@ -53,4 +53,5 @@ a {
 
 body {
   background-color: var(--color-black);
+  overflow-x: hidden;
 }
